 * Issue #282: psutil.STATUS_* constants can now be compared by using their
   string representation.
 * Issue #283: speedup Process.is_running() by caching its return value in case
   the process is terminated.
 * Issue #284: (POSIX) per-process number of opened file descriptors.
 * Issue #287: psutil.process_iter() now caches Process instances between calls.

BUGFIXES

 * Issue #193: psutil.Popen constructor can throw an exception if the spawned
   process terminates quickly.
 * Issue #240: (OSX) incorrect use of free() for Process.get_connections().
 * Issue #244: (POSIX) Process.wait() can hog CPU resources if called against
   a process which is not our children.
 * Issue #248: (Linux) psutil.network_io_counters() might return erroneous NIC
   names.
 * Issue #252: (Windows) process getcwd() erroneously raise NoSuchProcess for
   processes owned by another user.  It now raises AccessDenied instead.
 * Issue #266: (Windows) psutil.get_pid_list() only shows 1024 processes.
   (patch by Amoser)
 * Issue #267: (OSX) Process.get_connections() - an erroneous remote address
   was returned. (Patch by Amoser)
 * Issue #272: (Linux) Porcess.get_open_files() - potential race condition can
   lead to unexpected NoSuchProcess exception.  Also, we can get incorrect
   reports of not absolutized path names.
 * Issue #275: (Linux) Process.get_io_counters() erroneously raise NoSuchProcess
   on old Linux versions. Where not available it now raises NotImplementedError.
 * Issue #286: Process.is_running() doesn't actually check whether PID has been
   reused.

API CHANGES

 * psutil.get_process_list() is deprecated.
 * ppid, name, exe, cmdline and create_time properties of Process class are now
   cached after being accessed, meaning NoSuchProcess will no longer be raised
   in case the process is gone in the meantime.
 * psutil.STATUS_* constants can now be compared by using their string
   representation.


0.4.1 - 2011-12-14
------------------

BUGFIXES
